--- a/curso-investimento.html
+++ b/curso-investimento.html
@@ -8,7 +8,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="projeto-dindin.css">
+
     <title>dindin</title>
+
+
 </head>
 
 <body>
@@ -24,66 +28,94 @@
         </nav>
     </header>
 
-    <main id="curso-investimento">
+    <main id="pagina-curso-investimento">
 
         <section id="curso-investimento">
+
+            <div class="descritivo-investimento">
+                <h1 id="investimento-para-iniciantes">Investimento para iniciantes</h1>
+                <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
+                    totam
+                    rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt
+                    explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
+                    consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
+            </div>
+
             <div class="imagem-investimento">
                 <img src="ilustra-poupando.png" alt="Investimento para iniciantes">
             </div>
-            <h1 id="investimento-para-iniciantes">Investimento para iniciantes</h1>
-            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam
-                rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt
-                explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
-                consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
+
         </section>
 
         <section id="aulas">
 
             <div class="aula" id="aula1">
                 <iframe> </iframe>
-                <h2>Aula 1</h2>
-                <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. 
 
-                    Ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>    
+                <div class="descriçao">
+                    <h2>Aula 1</h2>
+                    <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur
+                        magni dolores eos qui ratione voluptatem sequi nesciunt.
+
+                        Ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni
+                        dolores eos qui ratione voluptatem sequi nesciunt.</p>
+                </div>
+
             </div>
             <hr />
 
             <section id="aulas">
                 <div class="aula" id="aula2">
                     <iframe> </iframe>
-                    <h2>Aula 2</h2>
-                    <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. 
 
-                        Ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
+                    <div class="descriçao">
+                        <h2>Aula 2</h2>
+                        <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
+                            consequuntur
+                            magni dolores eos qui ratione voluptatem sequi nesciunt.
+
+                            Ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur
+                            magni
+                            dolores eos qui ratione voluptatem sequi nesciunt.</p>
+                    </div>
+
                 </div>
                 <hr />
 
                 <section id="aulas">
                     <div class="aula" id="aula3">
                         <iframe> </iframe>
-                        <h2>Aula 3</h2>
-                        <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. 
 
-                            Ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. </p>
+                        <div class="descriçao">
+                            <h2>Aula 3</h2>
+                            <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
+                                consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
+
+                                Ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur
+                                magni dolores eos qui ratione voluptatem sequi nesciunt. </p>
+                        </div>
+
                     </div>
                 </section>
 
     </main>
 
     <footer>
-        <img class="logo-footer" src="logo-footer.png" alt="Logo do site Dindin">
+        <div class="container-logo-footer">
+            <img class="logo-footer" src="logo-footer.png" alt="Logo do site Dindin">
+        </div>
 
-        <nav>
-            <a class="menu-item-footer" href="cursos.html">CURSOS</a>
-            <a class="menu-item-footer" href="blog.html">BLOG</a>
-            <a class="menu-item-footer" href="contato.html">CONTATO</a>
+        <nav class="footer">
+            <a class="menu-item-footer" href="cursos.html">cursos</a>
+            <a class="menu-item-footer" href="blog.html">blog</a>
+            <a class="menu-item-footer" href="contato.html">contato</a>
             </a>
         </nav>
 
-        <div class="link-footer">
-            <a href="">quero ser prof</a>
-            <a href="">aqui tem outro link</a>
-        </div>
+        <nav class="link-footer">
+            <button class="button-footer">quero ser prof</a>
+                <button class="button-footer">aqui tem outro link</a>
+        </nav>
 
     </footer>
 
