--- a/cursos.html
+++ b/cursos.html
@@ -8,7 +8,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="projeto-dindin.css">
+
     <title>dindin</title>
+
+
 </head>
 
 <body>
@@ -35,24 +39,35 @@
             <div class="imagens-cursos">
                 <img src="ilustra-poupando.png" alt="Investimento para iniciantes">
             </div>
-            <h2 id="titulo-investimento">Investimento para iniciantes</h2>
-            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam
-                rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt
-                explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
-                consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
-            <button class="começar">começar agora</button>
+
+            <div class="descritivo-cursos">
+                <h2 id="titulo-investimento">Investimento para iniciantes</h2>
+                <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
+                    totam
+                    rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt
+                    explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
+                    consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
+                <button class="começar">começar agora</button>
+            </div>
+
         </section>
         <hr />
+
         <section id="poupando">
             <div class="imagens-cursos">
                 <img src="ilustra-investimento.png" alt="Poupando e rendendo">
             </div>
-            <h2 id="titulo-poupando">Poupando e Rendendo</h2>
-            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam
-                rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt
-                explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
-                consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
-            <button class="começar">começar agora</button>
+
+            <div class="descritivo-cursos">
+                <h2 id="titulo-poupando">Poupando e Rendendo</h2>
+                <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
+                    totam
+                    rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt
+                    explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
+                    consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
+                <button class="começar">começar agora</button>
+            </div>
+
         </section>
         <hr />
 
@@ -60,30 +75,37 @@
             <div class="imagens-cursos">
                 <img src="ilustra-independencia.png" alt="Independência financeira">
             </div>
-            <h2 id="titulo-independencia">Independência Financeira</h2>
-            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam
-                rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt
-                explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
-                consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
-            <button class="começar">começar agora</button>
+
+            <div class="descritivo-cursos">
+                <h2 id="titulo-independencia">Independência Financeira</h2>
+                <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
+                    totam
+                    rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt
+                    explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
+                    consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
+                <button class="começar">começar agora</button>
+            </div>
+
         </section>
 
     </main>
 
     <footer>
-        <img class="logo-footer" src="logo-footer.png" alt="Logo do site Dindin">
+        <div class="container-logo-footer">
+            <img class="logo-footer" src="logo-footer.png" alt="Logo do site Dindin">
+        </div>
 
-        <nav>
-            <a class="menu-item-footer" href="cursos.html">CURSOS</a>
-            <a class="menu-item-footer" href="blog.html">BLOG</a>
-            <a class="menu-item-footer" href="contato.html">CONTATO</a>
+        <nav class="footer">
+            <a class="menu-item-footer" href="cursos.html">cursos</a>
+            <a class="menu-item-footer" href="blog.html">blog</a>
+            <a class="menu-item-footer" href="contato.html">contato</a>
             </a>
         </nav>
 
-        <div class="link-footer">
-            <a href="">quero ser prof</a>
-            <a href="">aqui tem outro link</a>
-        </div>
+        <nav class="link-footer">
+            <button class="button-footer">quero ser prof</a>
+                <button class="button-footer">aqui tem outro link</a>
+        </nav>
 
     </footer>
 
