ajustes html e css

--- a/curso-investimento.html
+++ b/curso-investimento.html
@@ -21,7 +21,7 @@
         <div class="container-logo">
             <img class="logo-header" src="logo-header.png" alt="Logo do site Dindin">
         </div>
-        <nav>
+        <nav class="nav-header">
             <a class="menu-item-header" href="cursos.html">CURSOS</a>
             <a class="menu-item-header" href="blog.html">BLOG</a>
             <a class="menu-item-header" href="contato.html">CONTATO</a>
@@ -50,14 +50,17 @@
         <section id="aulas">
 
             <div class="aula" id="aula1">
-                <iframe> </iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/yRtjuTTGhh4"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
 
                 <div class="descriçao">
                     <h2>Aula 1</h2>
                     <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur
-                        magni dolores eos qui ratione voluptatem sequi nesciunt.
-
-                        Ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni
+                        magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
+                    <br />
+                    <p> Ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni
                         dolores eos qui ratione voluptatem sequi nesciunt.</p>
                 </div>
 
@@ -66,15 +69,18 @@
 
             <section id="aulas">
                 <div class="aula" id="aula2">
-                    <iframe> </iframe>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/tCyN6bMWYXI"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
 
                     <div class="descriçao">
                         <h2>Aula 2</h2>
                         <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
                             consequuntur
-                            magni dolores eos qui ratione voluptatem sequi nesciunt.
-
-                            Ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur
+                            magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
+                        <br />
+                        <p> Ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur
                             magni
                             dolores eos qui ratione voluptatem sequi nesciunt.</p>
                     </div>
@@ -84,15 +90,20 @@
 
                 <section id="aulas">
                     <div class="aula" id="aula3">
-                        <iframe> </iframe>
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/6nfQFRvinEA"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
 
                         <div class="descriçao">
                             <h2>Aula 3</h2>
                             <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
-                                consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
-
-                                Ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur
-                                magni dolores eos qui ratione voluptatem sequi nesciunt. </p>
+                                consequuntur
+                                magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
+                            <br />
+                            <p> Ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur
+                                magni
+                                dolores eos qui ratione voluptatem sequi nesciunt.</p>
                         </div>
 
                     </div>
