--- a/cursos.html
+++ b/cursos.html
@@ -21,7 +21,7 @@
         <div class="container-logo">
             <img class="logo-header" src="logo-header.png" alt="Logo do site Dindin">
         </div>
-        <nav>
+        <nav class="nav-header">
             <a class="menu-item-header" href="cursos.html">CURSOS</a>
             <a class="menu-item-header" href="blog.html">BLOG</a>
             <a class="menu-item-header" href="contato.html">CONTATO</a>
@@ -47,7 +47,7 @@
                     rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt
                     explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
                     consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
-                <button class="começar">começar agora</button>
+                <a href="curso-investimento.html"><button class="começar">começar agora</button></a>
             </div>
 
         </section>
