--- a/cursos.html
+++ b/cursos.html
@@ -22,6 +22,7 @@
             <img class="logo-header" src="logo-header.png" alt="Logo do site Dindin">
         </div>
         <nav class="nav-header">
+            <img src="white-hamburger-menu-icon-24.jpg" alt="menu-icon" id="menu-icon"/>
             <a class="menu-item-header" href="cursos.html">CURSOS</a>
             <a class="menu-item-header" href="blog.html">BLOG</a>
             <a class="menu-item-header" href="contato.html">CONTATO</a>
@@ -95,7 +96,7 @@
             <img class="logo-footer" src="logo-footer.png" alt="Logo do site Dindin">
         </div>
 
-        <nav class="footer">
+        <nav class="nav-footer">
             <a class="menu-item-footer" href="cursos.html">cursos</a>
             <a class="menu-item-footer" href="blog.html">blog</a>
             <a class="menu-item-footer" href="contato.html">contato</a>
