--- a/curso-investimento.html
+++ b/curso-investimento.html
@@ -21,8 +21,8 @@
         <div class="container-logo">
             <img class="logo-header" src="logo-header.png" alt="Logo do site Dindin">
         </div>
+
         <nav class="nav-header">
-            <img src="white-hamburger-menu-icon-24.jpg" alt="menu-icon" id="menu-icon" />
             <a class="menu-item-header" href="cursos.html">CURSOS</a>
             <a class="menu-item-header" href="blog.html">BLOG</a>
             <a class="menu-item-header" href="contato.html">CONTATO</a>
@@ -43,7 +43,7 @@
             </div>
 
             <div class="imagem-investimento">
-                <img src="ilustra-poupando.png" alt="Investimento para iniciantes">
+                <img class="img-investimento" src="ilustra-poupando.png" alt="Investimento para iniciantes">
             </div>
 
         </section>
@@ -51,10 +51,11 @@
         <section id="aulas">
 
             <div class="aula" id="aula1">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/yRtjuTTGhh4"
+               <div class="video"> <iframe width="560" height="315" src="https://www.youtube.com/embed/yRtjuTTGhh4"
                     title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
+                    </div>
 
                 <div class="descriçao">
                     <h2>Aula 1</h2>
@@ -70,10 +71,11 @@
 
             <section id="aulas">
                 <div class="aula" id="aula2">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/tCyN6bMWYXI"
+                    <div class="video"> <iframe width="560" height="315" src="https://www.youtube.com/embed/tCyN6bMWYXI"
                         title="YouTube video player" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
+                    </div>
 
                     <div class="descriçao">
                         <h2>Aula 2</h2>
@@ -91,10 +93,11 @@
 
                 <section id="aulas">
                     <div class="aula" id="aula3">
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/6nfQFRvinEA"
+                        <div class="video"> <iframe width="560" height="315" src="https://www.youtube.com/embed/6nfQFRvinEA"
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                             allowfullscreen></iframe>
+                            </div>
 
                         <div class="descriçao">
                             <h2>Aula 3</h2>
