--- a/cursos.html
+++ b/cursos.html
@@ -21,8 +21,8 @@
         <div class="container-logo">
             <img class="logo-header" src="logo-header.png" alt="Logo do site Dindin">
         </div>
+
         <nav class="nav-header">
-            <img src="white-hamburger-menu-icon-24.jpg" alt="menu-icon" id="menu-icon" />
             <a class="menu-item-header" href="cursos.html">CURSOS</a>
             <a class="menu-item-header" href="blog.html">BLOG</a>
             <a class="menu-item-header" href="contato.html">CONTATO</a>
@@ -38,7 +38,7 @@
 
         <section id="investimento">
             <div class="imagens-cursos">
-                <img src="ilustra-poupando.png" alt="Investimento para iniciantes">
+                <img class="img-cursos" src="ilustra-poupando.png" alt="Investimento para iniciantes">
             </div>
 
             <div class="descritivo-cursos">
@@ -56,7 +56,7 @@
 
         <section id="poupando">
             <div class="imagens-cursos">
-                <img src="ilustra-investimento.png" alt="Poupando e rendendo">
+                <img class="img-cursos" src="ilustra-investimento.png" alt="Poupando e rendendo">
             </div>
 
             <div class="descritivo-cursos">
@@ -74,7 +74,7 @@
 
         <section id="independencia">
             <div class="imagens-cursos">
-                <img src="ilustra-independencia.png" alt="Independência financeira">
+                <img class="img-cursos" src="ilustra-independencia.png" alt="Independência financeira">
             </div>
 
             <div class="descritivo-cursos">
