pagina cursos e curso-investimento finalizadas

--- a/curso-investimento.html
+++ b/curso-investimento.html
@@ -22,9 +22,10 @@
             <img class="logo-header" src="logo-header.png" alt="Logo do site Dindin">
         </div>
 
-        <nav class="nav-header">
+
+        <nav id="nav-header" class="nav-header">
             <a class="menu-item-header" href="cursos.html">CURSOS</a>
-            <a class="menu-item-header" href="blog.html">BLOG</a>
+            <a class="menu-item-header" href="BLOG.HTML">BLOG</a>
             <a class="menu-item-header" href="contato.html">CONTATO</a>
         </nav>
     </header>
