--- a/cursos.html
+++ b/cursos.html
@@ -24,7 +24,7 @@
 
         <nav class="nav-header">
             <a class="menu-item-header" href="cursos.html">CURSOS</a>
-            <a class="menu-item-header" href="blog.html">BLOG</a>
+            <a class="menu-item-header" href="BLOG.HTML">BLOG</a>
             <a class="menu-item-header" href="contato.html">CONTATO</a>
         </nav>
     </header>
