--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
         <section>
             
             <div class="navbar">
-                <a class="a1" href="https://www.w3schools.com">Cursos</a>
-                <a class="a2" href="https://www.w3schools.com">Blog</a>
-                <a class="a3" href="https://www.w3schools.com">Contato</a>
+                <a class="a1" href="cursos.html">Cursos</a>
+                <a class="a2" href="blog.html">Blog</a>
+                <a class="a3" href="contato.html">Contato</a>
             </div>
             
             <div class="textodestaque">
-                <p1> Educação Financeira é tudo de bom </p>
-                <p2> Vem comigo que te mostro por onde começar</p>
+                <h1> Educação Financeira é tudo de bom </h1>
+                <p> Vem comigo que te mostro por onde começar</p>
                 <img alt="imagem" src="ilustra-banner.png">
             </div>
 
